Avoid layout bug with 2 x 5 digits

--- a/style/atlantis.css
+++ b/style/atlantis.css
@@ -163,7 +163,7 @@ img.preload {
   height: 67px;
 }
 .heading .logo {
-  width: 170px;
+  width: 160px;
   height: auto;
   max-width: 40%;
   margin-top: 10px;
